# gwenplatformer

./: .gitignore  README.md
g2d_editor/: Cargo.toml
g2d_engine/: Cargo.toml
g2d_engine/src/: lib.rs
g2d_engine/src/db/: db.rs
g2d_engine/src/gui/: framework.rs  gui.rs
g2d_game/: Cargo.toml
g2d_game/src/: game_gui.rs  gui.rs  main.rs
gwen2d_editor/: Cargo.toml
gwen2d_editor/src/: main.rs
gwen2d_editor/src/gui/: menu.rs
gwen2d_engine/: Cargo.toml
gwen2d_engine/src/: main.rs
gwen2d_engine/src/db/: engine_db.rs
gwen2d_engine/src/gui/: tab_entities.rs  tab_project.rs
gwen2d_engine/src/model/: entity.rs  entity_category.rs  entity_state.rs  project.rs
