[package]
name = "g2d_engine"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.26.0"
egui-modal = "0.6.0"
egui_extras = "0.26.0"
image = "0.25.6"
rfd = "0.15.3"
tokio = { version = "1", features = ["full"] }
mini-redis = "0.4"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-rustls", "macros"] }
dirs-next = "2"
egui = "0.26"
egui-wgpu = "0.26.0"
egui-winit = { version = "0.26", default-features = false, features = ["links"] }
env_logger = "0.10"
error-iter = "0.4"
log = "0.4"
pixels = "0.15.0"
winit = "0.29"
winit_input_helper = "0.15"