[package]
name = "gwen2d_engine"
version = "0.1.0"
edition = "2021"

[features]
optimize = ["log/release_max_level_warn"]
default = ["optimize"]

[dependencies]
egui = "0.26"
egui-wgpu = "0.26.0"
egui-winit = { version = "0.26", default-features = false, features = ["links"] }
env_logger = "0.10"
error-iter = "0.4"
log = "0.4"
pixels = "0.15.0"
winit = "0.29"
winit_input_helper = "0.15"
image = "0.25.6"
g2d_engine = { path = "../g2d_engine" }