[package]
name = "gwen2d_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.31.1"
egui = "0.31.1"
egui-modal = "0.5.0"
egui_extras = "0.31.1"
log = "0.4"
env_logger = "0.11.5"
image = "0.24"
rfd = "0.12"
tokio = { version = "1", features = ["full"] }
mini-redis = "0.4"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-rustls", "macros"] }
dirs-next = "2"